feat: signup and login endpoint
