# public/swagger.json
@@ -43,6 +43,21 @@
 					"firstName"
 				],
 				"type": "object"
+			},
+			"LoginDto": {
+				"properties": {
+					"password": {
+						"type": "string"
+					},
+					"email": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"password",
+					"email"
+				],
+				"type": "object"
 			}
 		},
 		"securitySchemes": {
@@ -108,6 +123,107 @@
 						"application/json": {
 							"schema": {
 								"$ref": "#/components/schemas/SignUpDto"
+							}
+						}
+					}
+				}
+			}
+		},
+		"/api/v1/auth/login": {
+			"post": {
+				"operationId": "Login",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"anyOf": [
+										{
+											"properties": {
+												"data": {
+													"properties": {
+														"user": {
+															"properties": {
+																"role": {},
+																"email": {},
+																"lastName": {},
+																"firstName": {},
+																"id": {}
+															},
+															"required": [
+																"role",
+																"email",
+																"lastName",
+																"firstName",
+																"id"
+															],
+															"type": "object"
+														},
+														"accessToken": {}
+													},
+													"required": [
+														"user",
+														"accessToken"
+													],
+													"type": "object"
+												},
+												"message": {
+													"type": "string"
+												},
+												"status": {
+													"type": "boolean"
+												},
+												"statusCode": {
+													"type": "number",
+													"format": "double"
+												}
+											},
+											"required": [
+												"data",
+												"message",
+												"status",
+												"statusCode"
+											],
+											"type": "object"
+										},
+										{
+											"properties": {
+												"data": {},
+												"message": {},
+												"statusCode": {
+													"type": "number",
+													"format": "double"
+												},
+												"status": {
+													"type": "boolean"
+												}
+											},
+											"required": [
+												"data",
+												"message",
+												"statusCode",
+												"status"
+											],
+											"type": "object"
+										}
+									]
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Auth"
+				],
+				"security": [],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/LoginDto"
 							}
 						}
 					}
